--- a/css/styles.css
+++ b/css/styles.css
@@ -42,19 +42,19 @@ ul {
 .header {
     background-color: var(--white-color);
     border-bottom: #ECECEC 1px solid;
+    padding-top: 24px;
+    padding-bottom: 24px;
 }
 
 /* logo webstudio */
 
 .header-logo {
     margin-right: 93px;
-
     font-family: Raleway;
     font-weight: 700;
     font-size: 26px;
     line-height: 1.2;
     text-decoration: none;
-
     color: var(--absolute-black);
 }
 
@@ -67,13 +67,12 @@ ul {
 .nav-list {
     list-style: none;
     display: flex;
+    padding-left: 0;
 }
 
 .main-nav {
     display: flex;
     align-items: center;
-    padding-top: 32px;
-    padding-bottom: 32px;
 }
 
 .nav-item {
@@ -241,11 +240,11 @@ ul {
     list-style: none;
     display: flex;
     padding-left: 0;
+    margin-right: 30px;
 }
 
 .work-item {
-    display: inline-block;
-    margin-right: 15px;
+    margin-right: 30px;
 }
 
 /* Our Team Section */
@@ -374,10 +373,13 @@ ul {
     background-color: #f5f4fa;
     color: var(--text-color-black);
     border-radius: 4px;
-    margin-right: 8px;
     border: 1px solid #F5F4FA;
     padding: 6px 22px 6px 22px;
    
+}
+
+.btn-item {
+    margin-right: 8px;
 }
 
 
@@ -452,4 +454,17 @@ ul {
     background-position: center; 
     background-repeat: no-repeat;
     background-size: cover;
+}
+
+
+.details-item ::before {
+    display: block;
+    content: "";
+    height: 120px;
+    background-image: url(../images/Vector.png);
+    background-size: contain;
+    background-repeat: no-repeat;
+    background-position: center;
+    border-radius: 4px;
+
 }
