Оформление иконок нашей команды

--- a/css/styles.css
+++ b/css/styles.css
@@ -4,6 +4,8 @@
     --text-color-gray: #757575;
     --white-color: #ffffff;
     --absolute-black: #000000;
+    --grid-row-gap: 30px;
+    --grid-column-gap: 30px;
 }
 
 body {
@@ -260,7 +262,6 @@ ul {
 
 .team-item {
     margin-left: 0;
-    margin-right: 30px;
 }
 
 .team-list {
@@ -290,6 +291,14 @@ ul {
     padding-bottom: 30px;
 
 }
+
+.team-item {
+    box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 
+     0px 1px 1px rgba(0, 0, 0, 0.14),
+     0px 2px 1px rgba(0, 0, 0, 0.2);
+    border-radius: 0px 0px 4px 4px;
+}
+
 
 /* Footer */
 
@@ -528,4 +537,28 @@ justify-content: center;
 
 .team-social-item {
     list-style: none;
+    
 }
+
+.team-social-link {
+    display: block;
+    padding: 12px;
+    border: none;
+    border-radius: 50%;
+    list-style: none;
+    margin: 0;
+    cursor: pointer;
+    fill: #AFB1B8;
+    background-color: transparent;
+
+}
+
+.team-social-link:hover,
+.team-social-link:focus {
+    background-color: #2196F3;
+    fill: #ffffff;
+}
+
+
+
+
