--- a/css/styles.css
+++ b/css/styles.css
@@ -268,6 +268,7 @@ ul {
     list-style: none;
     padding-left: 0;
     display: flex;
+    justify-content: space-between;
     
 }
 
@@ -537,6 +538,10 @@ justify-content: center;
 
 .team-social-item {
     list-style: none;
+    justify-content: space-around;
+    display: flex;
+    margin-left: 0px;
+    padding-left: 0px;
     
 }
 
@@ -559,6 +564,76 @@ justify-content: center;
     fill: #ffffff;
 }
 
+.section-title-clients {
+    color:  #212121;
+    margin-right: auto;
+    margin-left: auto;
+    width: 1200px;
+    padding-right: 15px;
+    padding-left: 15px;
+    font-weight: 700;
+    font-size: 36px;
+    line-height: 1.16;
+    text-align: center;
+    margin-bottom: 50px;
+    margin-top: 94px;
+}
+
+.client-item {
+    flex-basis: calc(100% / 6-30px);
+    margin-left: 30px;
+}
 
 
+.client-list {
+    list-style: none;
+    display: flex;
+    justify-content: center;
+    margin-left: calc(-1 * 30px);
+    margin-bottom: 94px;
+}
 
+.clients {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 170px;
+    height: 92px;
+    border: 1px solid #AFB1B8;
+    border-radius: 4px;
+    color: inherit;
+}
+
+.client-logo {
+    fill: currentColor;
+}
+
+.clients:hover,
+.clients:focus {
+  border-color: var(--accent-color);
+  color: var(--accent-color);
+}
+
+.container-footer {
+   
+    
+  
+
+}
+.join {
+    
+    text-transform: uppercase; 
+}
+
+
+.container-footer-social {
+    display: flex;
+    justify-content: space-around;
+}
+
+.porfolio-item:hover,
+.porfolio-item:focus {
+  box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06),
+    1px 4px 6px rgba(0, 0, 0, 0.16);
+    cursor: pointer;
+}
