--- a/css/styles.css
+++ b/css/styles.css
@@ -101,7 +101,10 @@ ul {
 .nav-link:hover,
 .nav-link:focus {
     color: var(--accent-color);
+    color: currentColor;
 }
+
+
 
 /* header address */
 
@@ -130,7 +133,8 @@ ul {
     align-items: center;
 }
 
-.header-address:hover {
+.header-address:hover,
+.header-address:focus {
     color: var(--accent-color);
 }
 
@@ -262,6 +266,7 @@ ul {
 
 .team-item {
     margin-left: 0;
+    background-color: #FFFFFF;
 }
 
 .team-list {
@@ -472,19 +477,22 @@ ul {
 
 .icon-mail {
 margin-right: 10px;
-fill: var(--text-color-gray);
+fill: currentColor;
 }
-.icon-mail:hover {
-    fill: var(--accent-color);
+
+.icon-mail:hover,
+.icon-mail:focus {
+    color: var(--accent-color);
 }
 
 .icon-telefon {
    margin-right: 10px;
-   fill: var(--text-color-gray);
+   fill: currentColor;
 }
 
-.icon-telefon:hover {
-    fill: #2196f3;
+.icon-telefon:hover,
+.icon-telefon:focus {
+    color: var(--accent-color);
 }
 
 .details-icon-sputnik {
@@ -527,6 +535,7 @@ fill: var(--text-color-gray);
     border-radius: 4px;
 }
 
+
 .team-social-items {
 display: flex;
 justify-content: center;
@@ -538,16 +547,18 @@ justify-content: center;
 
 .team-social-item {
     list-style: none;
-    justify-content: space-around;
     display: flex;
     margin-left: 0px;
     padding-left: 0px;
+    width: 100%;
+    height: 100%;
     
 }
 
 .team-social-link {
-    display: block;
-    padding: 12px;
+    display: flex;
+    width: 44px;
+    height: 44px;
     border: none;
     border-radius: 50%;
     list-style: none;
@@ -555,6 +566,8 @@ justify-content: center;
     cursor: pointer;
     fill: #AFB1B8;
     background-color: transparent;
+    justify-content: center;
+    align-items: center;
 
 }
 
@@ -606,6 +619,9 @@ justify-content: center;
 
 .client-logo {
     fill: currentColor;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 .clients:hover,
@@ -614,12 +630,6 @@ justify-content: center;
   color: var(--accent-color);
 }
 
-.container-footer {
-   
-    
-  
-
-}
 .join {
     
     text-transform: uppercase; 
