--- a/css/styles.css
+++ b/css/styles.css
@@ -101,7 +101,7 @@ ul {
 .nav-link:hover,
 .nav-link:focus {
     color: var(--accent-color);
-    color: currentColor;
+    
 }
 
 
@@ -312,6 +312,8 @@ ul {
     background-color: #2f303a;
     padding-top: 60px;
     padding-bottom: 60px;
+    display: flex;
+    align-items: baseline;
 }
 
 /* Logo */
@@ -455,7 +457,6 @@ ul {
    
 }
 
-
 /* Overlay */
 
 .overlay {
@@ -562,13 +563,13 @@ justify-content: center;
     border: none;
     border-radius: 50%;
     list-style: none;
-    margin: 0;
+    margin-left: 0px;
+    margin-right: 0px;
     cursor: pointer;
-    fill: #AFB1B8;
-    background-color: transparent;
+    fill: #FFFFFF;
     justify-content: center;
     align-items: center;
-
+    background-color: rgba(255, 255, 255, 0.1);
 }
 
 .team-social-link:hover,
@@ -630,15 +631,24 @@ justify-content: center;
   color: var(--accent-color);
 }
 
-.join {
-    
-    text-transform: uppercase; 
+.join {  
+width: 145px;
+height: 16px;
+font-family: 'Roboto';
+font-style: normal;
+font-weight: 700;
+font-size: 14px;
+line-height: 16px;
+letter-spacing: 0.03em;
+text-transform: uppercase;
+color: #FFFFFF;
+margin-bottom: 20px;
+
 }
 
 
 .container-footer-social {
     display: flex;
-    justify-content: space-around;
 }
 
 .porfolio-item:hover,
@@ -646,4 +656,22 @@ justify-content: center;
   box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06),
     1px 4px 6px rgba(0, 0, 0, 0.16);
     cursor: pointer;
+}
+
+
+
+.container-clients {
+    padding-top: 94px;
+    padding-bottom: 94px;
+    width: 1200px;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+.section-title-clients {
+    font-weight: 700;
+    font-size: 36px;
+    line-height: 1.16;
+    text-align: center;
+   padding-bottom: 50px;
 }
