--- a/css/styles.css
+++ b/css/styles.css
@@ -75,6 +75,19 @@ ul {
 .main-nav {
     display: flex;
     align-items: center;
+    position: relative;
+}
+
+.nav-link:::after {
+    content: '';
+    display: block;
+    width: 48px;
+    height: 4px;
+    background-color: var(--accent-color);
+    position: absolute;
+    left: 0;
+    bottom: -33.4px;
+    border-radius: 2px;
 }
 
 .nav-item {
@@ -89,20 +102,31 @@ ul {
     color: var(--accent-color);
 }
 
-.nav-link {
+.nav-link  {
     font-weight: 500;
     font-size: 14px;
     line-height: 1.14;
     letter-spacing: 0.02em;
     text-decoration: none;
     color: var(--text-color-black);
+    color: inherit;
+    text-decoration: none;
+    transition-property: color;
+    transition-duration: 250ms;
+    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
+
+
+
 
 .nav-link:hover,
 .nav-link:focus {
     color: var(--accent-color);
     
 }
+
+
+
 
 
 
@@ -773,3 +797,99 @@ position: absolute;
     display: flex;
     position: relative;
 }
+
+
+
+/* Modal */
+
+.backdrop {
+    /* position:fixed; */
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.2) ;
+    transition: opacity 0.5s, visibility 0.5s;
+    transition-duration: 250ms;
+    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+
+}
+
+.backdrop.is-hidden {
+    opacity: 0;
+    pointer-events: none;
+    visibility: hidden;
+}
+
+.modal {
+position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  width: 528px;
+  min-height: 581px;
+  height: 581px;
+  background-color: rgba(255, 255, 255, 1);
+  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
+
+
+}
+
+.modal-close-button {
+   position: absolute;
+   top: 17px;
+   right: 17px;
+   width: 30px;
+   height: 30px;
+   background: #FFFFFF;
+   border: 1px solid rgba(0, 0, 0, 0.1);
+   border-radius: 50%;
+   cursor: pointer;
+}
+
+.portfolio-thumb:hover::before {
+    display: inline-block;
+    content: "";
+    position: absolute;    
+    overflow: hidden;
+    width: 100%;
+    height: 100%;
+    opacity: 1;
+    font-family: 'Roboto';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 18px;
+    line-height: 28px;
+    letter-spacing: 0.03em;
+    color: #FFFFFF;
+    position: relative;
+    top: 0;
+    right: 0;
+    width: 100%;
+    height: 100%;
+    padding: 64px 24px;
+    background-color: rgba(33, 150, 243, 0.9);
+    transform: translateY(101%);
+    transition: transform 250ms;
+    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  }
+
+/* .portfolio-overlay { */
+    font-family: 'Roboto';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 18px;
+    line-height: 28px;
+    letter-spacing: 0.03em;
+    color: #FFFFFF;
+    position: relative;
+    top: 0;
+    right: 0;
+    width: 100%;
+    height: 100%;
+    padding: 64px 24px;
+    background-color: rgba(33, 150, 243, 0.9);
+    transform: translateY(101%);
+    transition: transform 250ms;
+    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  }
